# bear-cds

./: .env.example  .gitignore  Cargo.toml  bear.toml  clipcopy  readme.md
caddy/: Dockerfile
example_repo/: pwn
example_repo/pwn/BUFFER-OVERFLOW/: .include  challenge.toml
example_repo/pwn/bearsay/: challenge.toml  dist.tar.xz
example_repo/pwn/bearsay/chal/: chal  chal.c
example_repo/pwn/buffer-overflow/: challenge.toml  dist.tar.xz
example_repo/web/elements/: challenge.toml  index.html
src/: challenge.rs  fly.rs  main.rs  rctf.rs
src/commands/: deploy.rs  leaderboard.rs  list.rs  mod.rs
