[package]
name = "bear-cds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bollard = "*"
clap = { version = "4.5.3", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.30"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tar = "0.4.40"
temp-dir = "0.1.13"
tokio = { version = "1.36.0", features = ["full"] }
tokio-macros = "2.2.0"
toml = "0.8.12"
ureq = { version = "2.9.6", features = ["json"] }
